Finishing the project Stage-1

--- a/Activity_01/index.html
+++ b/Activity_01/index.html
@@ -14,7 +14,7 @@
         <div class="navbar">
             <a href="register.html">Register</a>
             <a href="list.html">List</a>
-            <a href="exit.html">Exit</a>
+            <a href="exit.html" onclick="self.close()">Exit</a>
         </div>
         
         <div class="main"></div>
