--- a/Activity_02/index.html
+++ b/Activity_02/index.html
@@ -11,26 +11,25 @@
     </head>
 
     <body>
+        
+       <div class="container-fluid">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Report</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Exit</a>
+                </li>
+            </ul>
+        </div>
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
-                <img src="assests/images/coffee.jpg" width="45" height="45" class="d-inline-block align-top" alt="">
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                      <a class="nav-item nav-link" href="pages/register.html">Register<span class="sr-only">(current)</span></a>
-                      <a class="nav-item nav-link" href="pages/list.html" >List</a>
-                      <a class="nav-item nav-link" href="pages/exit.html">Exit</a>
-                    </div>
-                </div>
-            </nav>
-
-
-
-
+      
     </body>
 
 </html>
