--- a/Activity_02/register.html
+++ b/Activity_02/register.html
@@ -50,7 +50,7 @@
         <p>Fill the form bellow. We'll contact you as soon as possible!!</p>
 
         <div style="padding-left: 8px; padding-right: 8px">
-            <form>
+            <form action="alert_form.html" method="post">
                 <div class="form-row">
                     <div class="col">
                         <div class="form-group">
@@ -66,28 +66,28 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="col-sm-4>
-                        <label for="gender">Gender:</label>
-                        <div class="form-check">
+                    <div class="col-sm-3">
+                        <label for="gender">Gender:</label>                
+                        <div class="form-check form-check-inline">
                             <input type="radio" name="gender" id="male" class="form-check-input">
                             <label for="male" class="form-check-label">Male</label>
                         </div>
-                        <div class="form-check">
+                         <div class="form-check form-check-inline">
                             <input type="radio" name="gender" id="female" class="form-check-input">
                             <label for="female" class="form-check-label">Female</label>
-                        </div> 
-                         <div class="form-check">
-                            <input type="radio" name="gender" id="other" class="form-check-input">
-                            <label for="other" class="form-check-label">Others</label>
                         </div>
-                    </div>            
-                    <div class="col-sm-3">
+                        <div class="form-check form-check-inline">
+                            <input type="radio" name="gender" id="other" class="form-check-input">
+                            <label for="other" class="form-check-label">Others</label>                            
+                        </div>
+                    </div>                                
+                    <div class="col-sm-5">
                         <div class="form-group"  style="padding-left: 30px">
                             <label for="phone">Phone:</label>
                             <input type="tel" name="phone" id="phone" class="form-control" placeholder="(dd)xxxxx-xxxx">
                         </div>                        
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="form-group">
                             <label for="cphone">Confirm Phone:</label>
                             <input type="tel" name="cphone" id="cphone" class="form-control" placeholder="(dd)xxxxx-xxxx">
@@ -156,12 +156,14 @@
                         <div class="form-group">
                             <label for="email">E-mail:</label>
                             <input type="text" name="email" id="email" class="form-control" placeholder="bob@example.com">
+                            <small id="emailhelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>                        
                     </div>
                     <div class="col-sm-3">
                         <div class="form-group">
                             <label for="password">Password:</label>
                             <input type="password" name="password" id="password" class="form-control">
+                            <small id="passwordhelp" class="form-text text-muted">Must be 8-20 characteres</small>
                         </div>                        
                     </div>
                      <div class="col-sm-3">
@@ -174,17 +176,9 @@
 
                 <input type="submit" name="submit" class="btn btn-primary" value="Send">
                 <input type="reset" name="reset" class="btn btn-warning" value="Reset">
+              
             </form>
         </div>
-
-
-
-
-
-
-
-
-
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
