--- a/Activity_02/exit.html
+++ b/Activity_02/exit.html
@@ -49,8 +49,8 @@
 
         <div style="padding-top: 150px">
             <center>
-                <p>Thank you for visit our WebSite!!!<br>
-                Will see you soon...</p>            
+                <img src="assets/images/seeyou.jpg" width="180px" height="180px">
+                <p>Thank you for visiting our WebSite!!!</p>            
             
                 <button type="button" class="btn btn-info" onclick="self.close()">Exit</button> 
             </center>     
