--- a/Activity_02/report.html
+++ b/Activity_02/report.html
@@ -48,7 +48,7 @@
 
         <div>
 
-            <h5 style="padding-top: 10px">Report about student of University Federal Ouro Preto</h5>
+            <h5 style="padding-top: 10px">Report about students of University Federal Ouro Preto</h5>
 
             <div class="table-responsive">
                 <table class="table table-sm table-borderless table-striped table-hover table-dark">
