--- a/Activity_02/index.html
+++ b/Activity_02/index.html
@@ -17,7 +17,7 @@
         
        <div class="container-fluid">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
+            <nav class="navbar navbar-expand-lg nav-justified navbar-light bg-light"> 
                 <a href="index.html" class="navbar-brand"><img src="assets/images/logo1.jpg" width="30px" height="30px"></a>
                 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#MainMenu"><span class="navbar-toggler-icon"></span>  
