Etapa 2 pasta IMC

--- a/CS1477-2018-02-atividade-pratica-001/IMC/index.html
+++ b/CS1477-2018-02-atividade-pratica-001/IMC/index.html
@@ -55,13 +55,13 @@
         <div>
 
 
-        <div class="div_box">
+        <div id="tableIMC" class="div_box">
              <div class="table-responsive">
-                <table class="table table-sm table-borderless table-striped table-hover table-dark">
+                <table class="table table-sm table-hover">
                     <thead>
                         <tr>
-                            <th>IMC</th>
-                            <th>Classificação</th>          
+                            <th class="th_design">IMC</th>
+                            <th class="th_design">Classificação</th>          
                         </tr>
                     </thead>
                     <tbody>
